tests/regression/error/lch_reduced_reduced5.smt2
(declare-const x Bool)
(declare-sort F 0)
(declare-fun u (F) F)
(declare-sort P 0)
(declare-fun S (Int Int) Int)
(declare-sort v 0)
(declare-sort lib 0)
(declare-sort li 0)
(declare-fun is (lib) Bool)
(declare-fun b (lib) v)
(declare-fun P (v) P)
(declare-fun o (v) P)
(declare-fun % (P) lib)
(declare-fun Po (li) P)
(declare-fun v (P P) P)
(declare-fun ib (P P) Bool)
(declare-fun l (P) Bool)
(declare-fun i (P F) Bool)
(declare-fun li (P) v)
(declare-fun lib (P P) Int)
(declare-fun b! (P P F) Int)
(declare-const p P)
(declare-const e P)
(assert (forall ((a P) (b P)) (! (= (ib p p) (not (= a b))) :pattern ((ib a b)))))
(assert (forall ((r P)) (! (= (l r) (forall ((j v)) (! (ib (v r r) (v r r)) :pattern ((v r r))))) :pattern ((l r)))))
(assert (forall ((e P) (ue F)) (! (= (i p (u ue)) (l (P (b (% e))))) :pattern ((u ue)))))
(declare-const f F)
;(assert (forall ((r P) (e P) (ue F)) (! (= (b! r r (u ue)) (ite (ib e (v r r)) 0 (b! r r ue))) :pattern ((b! r e (u ue))))))
(declare-const k li)
(declare-const s v)
(assert (not (ib p (o s))))
(assert (or x (and (= (P (li p)) p) (forall ((i P)) (! (ib p (P (li i))) :pattern ((li i)))))))
(assert (= (lib p p) (b! p (P (ite (is (% p)) (b (% p)) (b (% p)))) (u f))))
;(assert (= (ib p p) (not (= p (o s)))))
(assert (= (i p (u f)) (l (P (b (% e))))))
(assert (= (b! p p (u f)) (ite (ib (P (ite (is (% p)) (b (% p)) (b (% p)))) (v p p)) 0 (b! p p f))))
;(assert (ib p (P (li p))))
;(assert (= (ib p p) (not (= (P (ite (is (% p)) (b (% p)) (b (% p)))) (v p p)))))
(assert (= (l (P (b (% e)))) (forall ((j v)) (! (ib (v (P (b (% e))) (P (b (% e)))) (v (P (b (% e))) (P (b (% e))))) :pattern ((v (P (b (% e))) (P (b (% e)))))))))
(assert (= (b! p p (u f)) (ite (ib p (v p p)) 0 (b! p p f))))
;(assert (= (ib p p) (not (= (v (P (b (% e))) (P (b (% e)))) (v (P (b (% e))) (P (b (% e))))))))
(assert (= (ib p p) (not (= p (v p p)))))
;(assert (ib (v (P (b (% e))) (P (b (% e)))) (v (P (b (% e))) (P (b (% e))))))
;(assert (ib (v (P (b (% p))) (P (b (% p)))) (v (P (b (% p))) (P (b (% p))))))